# keypair-grinder

./: Cargo.toml  README.md  keypair.json  keypair_grinder.sh
src/: keygen.rs
